text spacing fix1

--- a/scss/main.css
+++ b/scss/main.css
@@ -74,6 +74,7 @@ li {
   font-weight: 400;
   font-size: 24px;
   align-self: start;
+  text-align: start;
 }
 .modal-profile p {
   font-size: 16px;
