--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -34,6 +34,7 @@
     font-weight: 400;
     font-size: 24px;
     align-self: start;
+    text-align: start;
   }
 
   & p {
